--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Model is trained on
           <br>
           <div class="btn btn-warning heading div_2">
-            Mom | Dad | Sister | Brother  
+            Brother | Sister | Dad | Mom
           </div>
         </div>
       </center>
@@ -41,6 +41,9 @@
     </p>
   </center>
 
+  <div class="copy_right_footer">
+    Devoloped by - Risha Agarwal
+  </div>
 <script src="main.js"></script>
 </body>
 
